@@ -1,6 +1,7 @@
-![](https://img.shields.io/badge/JDA%20Version-5.0.0--alpha.5-important)
-![](https://img.shields.io/badge/Version-Use_latest_commit-informational)
+[![](https://img.shields.io/maven-central/v/io.github.freya022/BotCommands)](#getting-the-library)
+[![](https://img.shields.io/badge/JDA%20Version-5.0.0--alpha.16-important)](https://github.com/DV8FromTheWorld/JDA/releases)
 [![image](https://discordapp.com/api/guilds/848502702731165738/embed.png?style=shield)](https://discord.gg/frpCcQfvTz)
+[![image](https://img.shields.io/badge/Wiki-Home-blue)](https://freya022.github.io/BotCommands-Wiki/)
 
 # BotCommands
 This framework simplifies the creation of Discord bots with the [JDA](https://github.com/DV8FromTheWorld/JDA) library.
@@ -27,7 +28,7 @@ This framework simplifies the creation of Discord bots with the [JDA](https://gi
     * Also supports choices, min/max values, channel types and autocompletion
   * Context menu commands (User / Message)
   * Application commands are **automatically registered on Discord on startup**
-    * This also includes command privileges (permissions) 
+    * This also includes command permissions
   * These commands as well as their options and choices **can also be localized** (per-guild language)
 * A JDA **event waiter** with (multiple) preconditions, timeouts and consumers for every completion states 
 * Secure and unique components (buttons / selection menus) IDs *with persistent and non-persistent storage*
@@ -36,67 +37,40 @@ This framework simplifies the creation of Discord bots with the [JDA](https://gi
 * Paginators and menus of different types (using buttons !)
 * Flexible constructors for your commands and injectable fields
 
-Note that text-based commands, slash commands and component handlers are running in separate threads from JDA as to not block the websocket, keep in mind that this does not allow you to have bad practises as described in [how to use RestAction(s)](https://github.com/DV8FromTheWorld/JDA/wiki/7%29-Using-RestAction) 
+Note that text-based commands, slash commands and component handlers are running in separate threads from JDA as to not block the websocket, keep in mind that this does not allow you to have bad practises as described in [how to use RestAction(s)](https://jda.wiki/using-jda/using-restaction/) 
 
 ## Getting Started
 You are recommended to have some experience with Java, OOP in general and [JDA](https://github.com/DV8FromTheWorld/JDA) before you start using this library
 
 ### Prerequisites
-[OpenJDK 16+](https://adoptium.net/releases.html?variant=openjdk16&jvmVariant=hotspot) <br>
-An IDE which supports Maven projects (I strongly recommend you use IntelliJ, it will be useful to gain time with Live Templates)
+* An [OpenJDK 17](https://adoptium.net/temurin/releases/?version=17) installation
+* Enable preview features in your compiler with `--enable-preview`, [How I enable it](https://github.com/freya022/BotCommands/blob/c537adba0619a2d74767796b1aec60a9c8ee720b/pom.xml#L74-L81), [IntelliJ w/ Maven tutorial](https://www.baeldung.com/java-preview-features#intellij-idea), [Gradle tutorial](https://stackoverflow.com/questions/55433883/how-to-enable-java-12-preview-features-with-gradle)
+* An IDE which supports Maven projects (I strongly recommend you use IntelliJ, it could be useful to save time with Live Templates)
 
 ## Getting the library
-### Installing with Jitpack
-
-<details>
-<summary>With Maven</summary>
-
-You can add the following to your pom.xml
+### Maven
 ```xml
-<repositories>
-  <repository>
-      <id>jitpack</id>
-      <url>https://jitpack.io</url>
-  </repository>
-</repositories>
-
-...
-
 <dependencies>
   <dependency>
-    <groupId>com.github.freya022</groupId>
+    <groupId>io.github.freya022</groupId>
     <artifactId>BotCommands</artifactId>
     <version>VERSION</version>
   </dependency>
 </dependencies>
 ```
-</details>
 
-<details>
-<summary>With Gradle</summary>
-
-You can add the following to your pom.xml
+### Gradle
 ```gradle
 dependencies {
-    implementation 'com.github.freya022:BotCommands:VERSION'
-    ...
-}
-
-...
-
-repositories {
-    maven {
-        name 'jitpack'
-        url 'https://jitpack.io'
-    }
-    ...
+    implementation 'io.github.freya022:BotCommands:VERSION'
 }
 ```
-</details>
+
+Alternatively, you can use jitpack to use snapshot versions, you can refer to [this wiki](https://jda.wiki/using-jda/using-new-features/) for more information
 
 ### Building / Installing manually
 
-See [BUILDING.md](BUILDING.md)
+While I don't recommend, you can see [BUILDING.md](BUILDING.md)
 
 **You're now ready to start coding!**
 
@@ -144,11 +118,11 @@ commandsBuilder.build(
 ```
 
 ## How do I make commands ?
-See the [wiki](https://github.com/freya022/BotCommands/wiki), you got a page for each type of command (regular prefixed / regex prefixed / slash commands)
+See the [wiki](https://freya022.github.io/BotCommands-Wiki/using-commands/using-slash-commands/Slash-commands/), you got a page for each type of command (regular prefixed / regex prefixed / slash commands)
 
 ## Some debugging tools
 
-- Enable the debug/trace logs in your logback.xml file, for a logging tutorial you can look at [the wiki's logging page](https://github.com/freya022/BotCommands/wiki/Logging)
+- Enable the debug/trace logs in your logback.xml file, for a logging tutorial you can look at [the wiki's logging page](https://freya022.github.io/BotCommands-Wiki/Logging)
 - There are also some switches in `DebugBuilder`, if you ever need them
 - To test your application commands you can use the `@Test` annotation
 
